# burglar

./: DESIGN  README  bank12.map  burglar  burglar.cabal
app/: Main.hs  Room.hs  RoomLoader.hs  RoomSolver.hs
src/: RoomLoader.hs  RoomSolver.hs
test/: RoomSpec.hs
testData/: bank0.map  bank13.map  bank2.map
