cabal-version:      3.0

name:               burglar
version:            0.1.0.0


author:             plasma0

maintainer:         konrad_kania@wp.pl

build-type:         Simple

extra-doc-files:    CHANGELOG.md, DESIGN
common warnings
    ghc-options: -Wall

executable burglar
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, room
    hs-source-dirs:   app
    default-language: GHC2021

library room
    import:           warnings
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.3.0, trifecta, containers, matrix
    exposed-modules:  Room, RoomLoader, RoomSolver
    default-language: GHC2021